# services_creator_cli

./: Cargo.toml
my_test_service_bkp/: Cargo.toml  Makefile  README.md
my_test_service_bkp/src/: lib.rs  main.rs
my_test_service_bkp/src/common/: types.rs  validation.rs
my_test_service_bkp/src/process/: processing.rs
my_test_service_bkp/src/routes/: mod.rs
my_test_service_bkp/src/services/: lambda.rs
src/: main.rs
src/templates/rust-service/: Cargo.toml  Makefile
src/templates/rust-service/src/: lib.rs  main.rs
src/templates/rust-service/src/common/: types.rs  validation.rs
src/templates/rust-service/src/process/: processing.rs
src/templates/rust-service/src/routes/: mod.rs
src/templates/rust-service/src/services/: lambda.rs
